discussion/jgit/163401/163401_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix BadComparable error flagged by error prone

Running recent error prone version complaining on that code:

LfsPointer.java:171: error: [BadComparable] Possible sign flip from
narrowing conversion
		return (int) (getSize() - o.getSize());
		       ^
    (see https://errorprone.info/bugpattern/BadComparable)
  Did you mean 'return Long.compare(getSize(), o.getSize());'?

Bug: 562756
Change-Id: I0522f1025319a9290c448a064fbafdb4b16d1d59
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Ostrovsky
Date: 2020-05-22 06:08:30.000000000
Message: 
Uploaded patch set 2: Commit message was updated.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-05-22 06:08:41.000000000
Message: 
Patch Set 2:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3165/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-05-22 07:29:46.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3165/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
